ingress/ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  rules:
  - host: k8sbys3bstn.com
